PCS BAckup 26Dec2023/Backup-Source/objects/SAP_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Encrypted_PIN__c</fullName>
        <label>Encrypted PIN</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phoenix_Account_Number__c</fullName>
        <formula>Phoenix_SF_Customer_Name__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active__c</fullName>
        <formula>Phoenix_Valid_to__c&gt;=TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Key__c</fullName>
        <description>This field is used at Lookup search. NOT FOR MATCHING FROM STAGING TO CUSTOMER</description>
        <formula>Phoenix_SAP_Customer_Code__c+&quot;-&quot;+Phoenix_Sales_Organization__c+&quot;-&quot;+Phoenix_Distribution_Channel__c +&quot;-&quot;+
(IF ( INCLUDES (  Phoenix_Division__c  , &quot;31&quot; ), &quot;31; &quot;,null ) &amp;
IF ( INCLUDES ( Phoenix_Division__c   , &quot;35&quot; ), &quot;35; &quot;,null ) &amp;
IF ( INCLUDES ( Phoenix_Division__c   , &quot;40&quot; ), &quot;40 &quot;,null ) 

)</formula>
        <label>Customer Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Division__c</fullName>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Grouping__c</fullName>
        <label>Grouping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_Distribution_Channel__c</fullName>
        <formula>Phoenix_Distribution_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_Division__c</fullName>
        <formula>IF ( INCLUDES ( Phoenix_Parent__r.Phoenix_Division__c , &quot;31&quot; ), &quot;31; &quot;,null ) &amp;
IF ( INCLUDES ( Phoenix_Parent__r.Phoenix_Division__c , &quot;35&quot; ), &quot;35; &quot;,null ) &amp;
IF ( INCLUDES ( Phoenix_Parent__r.Phoenix_Division__c , &quot;40&quot; ), &quot;40 &quot;,null )</formula>
        <label>Parent Account Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_SAP_Customer_Code__c</fullName>
        <formula>Phoenix_Parent__r.Phoenix_SAP_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent SAP Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_Sales_Organization__c</fullName>
        <formula>Phoenix_Parent__r.Phoenix_Sales_Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SAP Customer</label>
        <referenceTo>SAP_Customer__c</referenceTo>
        <relationshipLabel>SAP Customers</relationshipLabel>
        <relationshipName>SAP_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Part_of_Hierarchy__c</fullName>
        <label>Part of Hierarchy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Partner_Function__c</fullName>
        <label>Partner Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Code__c</fullName>
        <externalId>true</externalId>
        <label>SAP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Created_Date__c</fullName>
        <label>SAP Customer Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Customer_Name_2__c</fullName>
        <label>SAP Customer Name 2</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SF_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SAP Customers</relationshipLabel>
        <relationshipName>SAP_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_SF_Customer_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Customer Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child SAP Customers</relationshipLabel>
        <relationshipName>Child_SAP_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Staging_Parent_SAP_Customer_Code__c</fullName>
        <label>Staging Parent SAP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Valid_from__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Valid_to__c</fullName>
        <label>Valid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Key__c</fullName>
        <description>Used to identify unique key from staging object to sap customer</description>
        <formula>IF(ISBLANK(Phoenix_Parent__c) , Phoenix_SAP_Customer_Code__c, Phoenix_Parent_SAP_Customer_Code__c+&quot;_&quot;+Phoenix_SAP_Customer_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer Key</label>
        <type>Text</type>
    </fields>
    <label>SAP Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Phoenix_SAP_Customer_Code__c</columns>
        <columns>NAME</columns>
        <columns>Phoenix_Sales_Organization__c</columns>
        <columns>Phoenix_Division__c</columns>
        <columns>Phoenix_Distribution_Channel__c</columns>
        <columns>Phoenix_Grouping__c</columns>
        <columns>Phoenix_SF_Customer_Name__c</columns>
        <columns>Phoenix_Valid_from__c</columns>
        <columns>Phoenix_Valid_to__c</columns>
        <columns>Phoenix_Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Parent_SAP_Customers</fullName>
        <columns>Phoenix_SAP_Customer_Code__c</columns>
        <columns>NAME</columns>
        <columns>Phoenix_Sales_Organization__c</columns>
        <columns>Phoenix_Division__c</columns>
        <columns>Phoenix_Distribution_Channel__c</columns>
        <columns>Phoenix_Grouping__c</columns>
        <columns>Phoenix_SF_Customer_Name__c</columns>
        <columns>Phoenix_Valid_from__c</columns>
        <columns>Phoenix_Valid_to__c</columns>
        <columns>Phoenix_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Parent__c</field>
            <operation>equals</operation>
        </filters>
        <label>Parent SAP Customers</label>
    </listViews>
    <nameField>
        <label>SAP Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>